--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,7 @@ body {
         width: 90%; } }
 
 .feature {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/background/background--features2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/background/background--features2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -588,7 +588,7 @@ body {
     flex: 0 0 50%; }
     @media (max-width: 780px) {
       .feature__img {
-        flex: 0 0 100%;
+        width: 100%;
         text-align: center; } }
     .feature__img img {
       width: 100%; }
@@ -640,14 +640,13 @@ body {
         margin-right: 0; } }
 
 .characters {
-  background-image: url("../img/background/background--characters.webp");
+  background-image: url(../../img/background/background--characters.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
   padding: 6.4rem 0 12.8rem 0;
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   .characters::before {
     content: "";
     display: block;
@@ -992,7 +991,7 @@ body {
   opacity: 0.7; }
 
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("..//img/background/background--page.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/background/background--page.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -1065,7 +1064,8 @@ body {
     background-color: var(--color-primary); }
 
 .slideshow {
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .slideshow__slide {
     padding: 1rem 2rem;
     position: relative; }
