--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -1,6 +1,6 @@
 .feature {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("../../img/background/background--features2.jpg");
+    url("../img/background/background-features2.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
