--- a/sass/layout/_shop.scss
+++ b/sass/layout/_shop.scss
@@ -5,6 +5,10 @@
     padding: 4.8rem 7.6rem;
   }
 
+  @include phone {
+    padding: 4.8rem;
+  }
+
   &__header {
     display: flex;
     align-items: center;
